--- a/vinilos.html
+++ b/vinilos.html
@@ -18,7 +18,7 @@
         <nav class="nav">
             <ul class="nav-lista">
                <li class="nav-lista_item">
-                    <a href="#" class="nav-lista_item-link">HISTORIA</a>    
+                    <a href="#" class="nav-lista_item-link">MUSICA Y VINILO</a>    
                </li>
                <li class="nav-lista_item">
                     <a href="#" class="nav-lista_item-link">ARTISTAS</a>    
@@ -53,8 +53,6 @@
                 Facebook: El Club del vinilo <br>
             </address>
       </footer>
-
-            
 
     </div>
     
