--- a/FERIAS/ferias.html
+++ b/FERIAS/ferias.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="fixed">
-        FERIAS
+        TIENDAS
     </div>
 
     <div class="contenido">
         <h1 class="titulo">BUENOS AIRES</h1>
-        <h2 class="titulo-interno">- SECOND HAND DISCOS</h2>
+        <h2 class="titulo-interno">SECOND HAND DISCOS</h2>
         <p>
             Venta de Vinilos nuevos y usados. <br>
             Bolsos Selktor y Slipmats. <br>
             Instagram: @seconhanddiscos
         </p>
-        <h2 class="titulo-interno">- HAUS RECORD STORE</h2>
+        <h2 class="titulo-interno">HAUS RECORD STORE</h2>
         <p>
             Venta de Vinilos nuevos y usados. <br>
             Indumentaria y Tote bags <br>
@@ -28,7 +28,7 @@
             Tienda oficial:
             <a href="https://www.hausrecordstore.com">hausrecordstore.com</a>
         </p>
-        <h2 class="titulo-interno">- CYBERWAX</h2>
+        <h2 class="titulo-interno">CYBERWAX</h2>
         <p>
             Venta de Vinilos nuevos e importados. <br>
             Instagram: @cyberwax.ar <br>
@@ -37,15 +37,39 @@
 
         </p>
         <h3 class="titulo">SAN FRANCISCO</h3>
-        <h3 class="titulo-interno">- AMOEBA MUSIC</h3>
+        <h3 class="titulo-interno">AMOEBA MUSIC</h3>
         <p>
             Venta de vinilos. <br>
             Indumentaria y Merch. <br>
             Tienda oficial:
             <a href="https://www.amoeba.com">amoeba.com</a>
         </p>
-        <h3 class="titulo"></h3>
+        <h3 class="titulo">BERLIN</h3>
+        <h3 class="titulo-interno">DEEJAY.DE</h3>
+        <p>
+            Venta online de discos nuevos. <br>
+            Equipos y accesorios. <br>
+            Tienda oficial:
+            <a href="https://www.deejay.de">deejay.de</a>
+        </p>
 
+        <h3 class="titulo">BARCELONA</h3>
+        <h3 class="titulo-interno">SMALL BLACK DOTS</h3>
+        <p>
+            Venta de discos nuevos y usados. <br>
+            Indumentaria, accesorios y merchandise. <br>
+            Tienda oficial: 
+            <a href="https://www.smallblackdots.net">smallblackdots.net</a>
+        </p>
+
+        <h3 class="titulo">HOLANDA</h3>
+        <h3 class="titulo-interno">CLONE</h3>
+        <p>
+            Venta de discos nuevos y usados. <br>
+            Merchandise. <br>
+            Tienda oficial:
+            <a href="https://clone.nl">clone.nl</a>
+        </p>
     </div>
 </body>
 </html>
