--- a/LA CABINA/lacabina.html
+++ b/LA CABINA/lacabina.html
@@ -39,7 +39,14 @@
     
         <h2 class="titulo">CDJ-2000NXS</h2>
         <p>
-
+            El CDJ es la tornamesa digital más popular en el mundo del DJ. Este funciona como <br>
+            reproductor de archivos digitales (MP3, WAV, AIFF, etc.) y como medio de sincronización a <br>
+            la hora de hacer la mezcla por medio de CDs, USB u otras tarjetas de memoria. El DJ hace <br>
+            uso de la rueda que tiene en el centro para "mover" una pista y el nivelador del lado (pitch) <br>
+            para cambiar la velocidad de reproducción. A través de las últimas décadas, Pioneer se ha consolidado <br>
+            como líder absoluto del mercado de reproductores para mezcla, gracias a la calidad de los productos que <br>
+            sacan y a la estandarización de sus equipos en la escena a nivel global. Es tal el monopolio que se volvió <br>
+            prácticamente obligatorio para cualquier club que desee ganar reputación tener un par de Pioneer CDJs en su DJ Booth.
         </p>
         <img class="contenido" src="CDJ2000NXS2.jpg" alt="CDJ-2000NXS">
 
