--- a/VINILOS/index.html
+++ b/VINILOS/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="cabecera">
-        <a href="vinilos.html">
+        <a href="index.html">
              <img src="elclubdelviniloLOGO1.png" alt="Ir al inicio">
         </a>
         <h1 class="titulo">EL CLUB DEL VINILO</h1>
